err/crawl-frontier.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/crawl_frontier-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/crawlfrontier'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/backends'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/backends/memory'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/backends/sqlalchemy'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/middlewares'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/requests'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/scrapy'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/scrapy/middlewares'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/scrapy/middlewares/seeds'...
Listing './lib/python3.5/site-packages/crawlfrontier/contrib/scrapy/schedulers'...
Listing './lib/python3.5/site-packages/crawlfrontier/core'...
Listing './lib/python3.5/site-packages/crawlfrontier/logger'...
Listing './lib/python3.5/site-packages/crawlfrontier/logger/filters'...
Listing './lib/python3.5/site-packages/crawlfrontier/logger/formatters'...
Listing './lib/python3.5/site-packages/crawlfrontier/logger/handlers'...
Listing './lib/python3.5/site-packages/crawlfrontier/settings'...
Listing './lib/python3.5/site-packages/crawlfrontier/tests'...
Listing './lib/python3.5/site-packages/crawlfrontier/utils'...
Listing './lib/python3.5/site-packages/crawlfrontier/utils/graphs'...
Compiling './lib/python3.5/site-packages/crawlfrontier/utils/graphs/generate_diagrams.py'...
***   File "./lib/python3.5/site-packages/crawlfrontier/utils/graphs/generate_diagrams.py", line 20
    print "generating png diagram for test '%s'..." % title
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/crawlfrontier/utils/heap.py'...
***   File "./lib/python3.5/site-packages/crawlfrontier/utils/heap.py", line 8
    print '-' * total_width
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_file-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tldextract'...
Listing './lib/python3.5/site-packages/tldextract/tests'...
Listing './lib/python3.5/site-packages/tldextract-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/w3lib'...
Listing './lib/python3.5/site-packages/w3lib-1.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
